@startuml
'https://plantuml.com/class-diagram

package models{

    class Board {
    - cards: ArrayList<Card>
    - instance : Board {static}
    - Board()
    + getInstance() : Board {static}
    + getCards() : ArrayList<Card>
    + setCards(cards : ArrayList<Card>) : void
    + addCard(card : Card) : void
    + addCardObservers(object : Observer) : void
    + cleanCards() : void
    }

    class Card{
    - word : String
    - forbiddenWords : ArrayList<String>
    - isReavealed = false : boolean
    - color : String
    + RED_COLOR = #c1121f : String {static}
    + BLUE_COLOR = #003566 : String {static}
    + NEUTRAL_COLOR = #f0ead2 : String {static}
    + Card(word : String, color : String)
    + getWord() : String
    + getColor() : String
    + isRevealed() : boolean
    + setWord(word : String) : void
    + setColor(color : String) : void
    + setRevealed(revealed : boolean) : void
    + getForbiddenWords() : ArrayList<String>
    + addForbiddenWords(forbiddenWords : ArrayList<String>) : void
    }

    class Game{
    - boardSize : int
    - timeLimit : int
    - blueTurn : boolean
    - spyTurn : boolean
    - guesses : Stack<Guess>
    - board : Board
    - instance : Game {static}
    - category : String
    - revealedTiles : boolean[][]
    - nbCardReturned : int
    - clueNb : int
    - pageManager : PageManager
    - isTimerRunning : boolean
    - blueReturned : int
    - redReturned : int
    - blueBegin : boolean
    - redBegin : boolean
    + Game()
    + initializeGame(boardSize : int, category : String, timeLimit : String, imagesMode : boolean) : void
    + getInstance() : Game {static}

    }

    class Guess{
    }

    class Key{
    }

    class PageManager{
    }

    class Stats{
    }

    class Subject{
    }

    class Category{}

    class JsonReader{}

    class Root{}

    class Word{}
}

Board --|> Serializable
Card --|> Serializable
@enduml